# tenma-ps

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_to_pypi.yml
docs/: source-manual.md
scripts/: build_wheel_package.bat  run_pytests_with_report.bat
search/: search_index.json
source-manual/: index.html
src/tenma_ps/: power_supply.py
